--- a/.htaccess
+++ b/.htaccess
@@ -1,8 +1,14 @@
 RewriteEngine On
+RewriteBase /QuanLyBanGiay_PHP/
 
-RewriteRule ^admin/([a-zA-Z0-9_-]+)/?$ admin/index.php?page=$1 [QSA,L]
-RewriteRule ^admin/?$ admin/index.php [QSA,L]
+# admin
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule ^admin/(.*)$ admin/index.php?page=$1 [QSA,L]
 
+RewriteRule ^admin/?$ admin/index.php?page=dashboard [QSA,L]
+
+# user
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^(.*)$ index.php?url=$1 [QSA,L]
