mvc test chua xong

--- a/.htaccess
+++ b/.htaccess
@@ -1,14 +1,6 @@
 RewriteEngine On
-RewriteBase /QuanLyBanGiay_PHP/
 
-# admin
+RewriteBase /QuanLyBanGiay_Php/admin/
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^admin/(.*)$ admin/index.php?page=$1 [QSA,L]
-
-RewriteRule ^admin/?$ admin/index.php?page=dashboard [QSA,L]
-
-# user
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^(.*)$ index.php?url=$1 [QSA,L]
+RewriteRule ^(.*)$ index.php?url=$1 [L,QSA]
